<resources>
    <string name="app_name">ContactPointLatest</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="need_cpm_text">Need a CPM account?</string>
    <string name="create_account">Create an Account</string>
    <string name="start_now">STart now!</string>
    <string name="already_have_an_account">ALready have an account?</string>
    <string name="txt_login">Log In</string>
    <string name="emails">Emails</string>
    <string name="consumers">Consumers</string>
    <string name="Library">Library</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="add_new_image">Add New Image</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="sync_consumers">Sync Consumers</string>
    <string name="over_wifi_only">Over WiFi only</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="first_name">Firstname</string>
    <string name="image_title">Image Title</string>
    <string name="last_name">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="try_email_marketing">Try EMail Marketing</string>
    <string name="create_n_send_emails">Create and Send Emails</string>
    <string name="view_reporting">View Reporting</string>
    <string name="no_emails_found">No sent emails found</string>
    <string name="view_email">View email</string>
    <string name="email_type">Email Type</string>
    <string name="from_email">From Email</string>
    <string name="from_name">From Name</string>
    <string name="email_subject">Email Subject</string>
    <string name="select_template">Select Template</string>





    <string-array name="email_items">
        <item>Work</item>
        <item>Home</item>
        <item>Other</item>
    </string-array>
    <string-array name="mobile_items">
        <item>Home</item>
        <item>Mobile</item>
        <item>Fax</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>

    <string-array name="email_types">
        <item>One_Off</item>
        <item>Recurring</item>
        <item>AB Testing</item>
    </string-array>

    <string-array name="test_emails">
        <item>test@gmail.com</item>
        <item>abc@gmail.com</item>
        <item>warrous@gmail.com</item>
    </string-array>



    <string-array name="image_types">
        <item>Banner</item>
        <item>Coupon</item>
        <item>Image</item>
    </string-array>


</resources>