<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_logo"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_centerHorizontal="true"/>

    <com.warrous.contactpointlatest.framework.TextInputLayoutWrapper
        android:id="@+id/til_name"
        style="@style/til_edit"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_below="@+id/iv_logo"
        android:layout_marginTop="@dimen/dimen_20">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:drawablePadding="@dimen/dimen_8"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_contact"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </com.warrous.contactpointlatest.framework.TextInputLayoutWrapper>

    <com.warrous.contactpointlatest.framework.TextInputLayoutWrapper
        android:id="@+id/til_email_address"
        style="@style/til_edit"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_below="@+id/til_name"
        android:layout_marginTop="@dimen/dimen_20">

        <EditText
            android:id="@+id/et_email_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/dimen_8"
            android:drawableLeft="@drawable/ic_email"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </com.warrous.contactpointlatest.framework.TextInputLayoutWrapper>

    <com.warrous.contactpointlatest.framework.TextInputLayoutWrapper
        android:id="@+id/til_password"
        style="@style/til_edit"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_below="@+id/til_email_address"
        android:layout_marginTop="@dimen/dimen_20">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/dimen_8"
            android:drawableLeft="@drawable/ic_password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </com.warrous.contactpointlatest.framework.TextInputLayoutWrapper>
    <com.warrous.contactpointlatest.framework.TextInputLayoutWrapper
        android:id="@+id/til_confirm_password"
        style="@style/til_edit"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_below="@+id/til_password"
        android:layout_marginTop="@dimen/dimen_20">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/dimen_8"
            android:drawableLeft="@drawable/ic_password"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_18" />
    </com.warrous.contactpointlatest.framework.TextInputLayoutWrapper>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_start_now"
        android:background="@drawable/ic_rectangle"
        android:text="@string/start_now"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/til_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_need_cpm"
        android:text="@string/already_have_an_account"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorGrey"
        android:layout_marginBottom="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_75" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_13"
        android:id="@+id/tv_login"
        android:text="@string/txt_login"
        android:layout_toRightOf="@+id/tv_need_cpm"
        android:layout_alignParentBottom="true"
        android:textColor="@color/app_theme_color"
        android:layout_marginRight="@dimen/dimen_75"
        android:layout_marginBottom="@dimen/dimen_15"/>
    <View
        android:id="@+id/view_pwd"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLightGrey"
        android:layout_above="@+id/tv_create_account"
        android:layout_marginBottom="@dimen/dimen_15"/>
</RelativeLayout>