<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/app_theme_color">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:src="@drawable/ic_arrow_back"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginLeft="@dimen/dimen_15" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_preferences"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"/>
                <ImageView
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    android:id="@+id/iv_edit"
                    android:src="@drawable/ic_edit"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:layout_marginRight="@dimen/dimen_15" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_gallery"
                    android:src="@drawable/ic_gallery"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name of Person"
                    android:id="@+id/tv_name"
                    android:layout_below="@id/iv_gallery"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:textSize="@dimen/text_size_18"
                    android:textColor="@color/colorWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email of Person"
                    android:id="@+id/tv_email"
                    android:layout_below="@id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/colorWhite"/>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sync_consumers"
                    android:text="@string/sync_consumers"
                    android:textColor="@color/colorSettingsTextColor"
                    android:textSize="@dimen/text_size_14"
                    android:layout_marginLeft="@dimen/dimen_15"
                    android:layout_marginTop="@dimen/dimen_18"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_over_wifi"
                    android:layout_marginLeft="@dimen/dimen_15"
                    android:layout_below="@+id/tv_sync_consumers"
                    android:text="@string/over_wifi_only"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_14"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_sync_consumers"
                    android:layout_marginTop="@dimen/dimen_8"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_notification_settings"
                    android:text="@string/notification_settings"
                    android:layout_below="@+id/tv_over_wifi"
                    android:layout_marginTop="@dimen/dimen_18"
                    android:layout_marginLeft="@dimen/dimen_15"
                    android:textColor="@color/colorSettingsTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_email_notifications"
                    android:text="@string/email_notifications"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_14"
                    android:layout_below="@+id/tv_notification_settings"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_marginLeft="@dimen/dimen_15"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_notification_settings"
                    android:layout_marginTop="@dimen/dimen_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sms_notificattions"
                    android:text="@string/sms_notifications"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_14"
                    android:layout_below="@+id/tv_email_notifications"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_marginLeft="@dimen/dimen_15"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_email_notifications"
                    android:layout_marginTop="@dimen/dimen_10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_push_notifications"
                    android:text="@string/push_notifications"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_14"
                    android:layout_below="@+id/tv_sms_notificattions"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_marginLeft="@dimen/dimen_15"/>
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_sms_notificattions"
                    android:layout_marginTop="@dimen/dimen_10"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>